# aiml-dash

./: .pre-commit-config.yaml  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.txt  PLUGIN_FRAMEWORK_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  codecov.yaml  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  refactor_pages.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: main.yml  validate-codecov-config.yml
aiml/: __init__.py  base.py  model_selection.py
aiml/deep_learning/: __init__.py  neural_network.py
aiml/experiments/: __init__.py  experiment.py  registry.py
aiml/supervised/: __init__.py  glm.py  linear.py  trees.py
aiml/unsupervised/: __init__.py  clustering.py  pca.py
aiml_dash/: __init__.py  app.py  auth.py  check_setup.py  foo.py  requirements.txt  run.py  services.py  theme_config.py
aiml_dash/api/: blueprint.py
aiml_dash/assets/: styles.css
aiml_dash/components/: __init__.py  ace_editor.py  common.py  shell.py
aiml_dash/core/: settings.py
aiml_dash/pages/: __init__.py
aiml_dash/plugins/: __init__.py  config_manager.py  dependency_manager.py  factory.py  hot_reload.py  loader.py  marketplace.py  models.py  plugin_manager.py  registry.py  runtime.py  standalone.py
aiml_dash/utils/: config.py  constants.py  data_manager.py  database.py  log_manager.py  logging.py  paginate_df.py  statistics.py  transforms.py  user_store.py
config/: dev_settings.yaml  production_settings.yaml  staging_settings.yaml
configs/: README.md  mkdocs.yml
data/: APP_MANAGER_GUIDE.md  COMMON_COMPONENTS_GUIDE.md  CONVERSION_SUMMARY.md  DATA_PROJECT_INTEGRATION.md  DMC_QUICK_REFERENCE.md  LANDING_CONVERSION.md  MANAGERS_ARCHITECTURE.md  REFACTORING_SUMMARY.md  SETTINGS_CONSOLIDATION.md  SETTINGS_IMPORT_EXPORT.md
docs/: DOCUMENTATION_IMPROVEMENTS.md  PLUGIN_DEVELOPMENT.md  REFACTORING_SUMMARY.md  TASK_COMPLETION_CHECKLIST.md  codexer.md  components.md  contributing.md  index.md  modules.md  pages.md  plugin_manager.md  plugins.md  settings_import_export.md  utils.md
docs/api-reference/: components.md  core.md  plugins.md  utilities.md
docs/development/: architecture.md  code-style.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/plugin-development/: best-practices.md  callbacks.md  components-layouts.md  creating-plugins.md  overview.md  structure.md  testing.md
docs/ui-components/: common-components.md  layout-system.md  overview.md  theming.md
docs/user-guide/: analysis-tools.md  data-management.md  export-import.md  overview.md  visualization.md
examples/: app_manager_example.py  data_project_integration_example.py  plugin_manager_example.py  settings_import_export_example.py
scripts/: check_docstring_quality.py  profile_hotspots.py
tests/: __init__.py  test_app.py  test_auth.py  test_auth_session.py  test_check_setup.py  test_foo.py  test_services.py  test_theme_config.py  test_user_store.py
tests/aiml/: __init__.py  test_experiments.py  test_model_selection.py
tests/api/: test_blueprint.py
tests/components/: __init__.py  test_ace_editor.py  (+1 more)
(+280 files in other folders)
