[project]
name = "aiml-dash"
version = "0.0.1"
description = "A Dash application for Predictive Analytics and Machine Learning."
authors = [{ name = "Jeff A. Maxey", email = "aiml-dash@proton.mee" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
"dash>=3.3.0",
"dash-mantine-components>=2.4.0",
"dash-iconify>=0.1.2",
"dash-ag-grid>=32.3.2",
"plotly>=5.18.0",
"pandas>=2.1.0",
"numpy>=1.24.0",
"scipy>=1.11.0",
"scikit-learn>=1.3.0",
"flask-caching>=2.0.0",
"flask-compress>=1.13.0",
"flask-talisman>=1.0.0",
"pydantic>=2.7.0",
"python-multipart>=0.0.6",
"pyyaml>=6.0",
"requests>=2.30.0",
"gunicorn>=20.1.0",
"watchdog>=3.0.0",
"typing-extensions>=4.5.0",
"markdown>=3.4.4",
"markdown-it-py>=3.0.0",
"mdurl>=0.1.2",
"beautifulsoup4>=4.12.2",
"lxml>=4.9.3",
"html5lib>=1.1",
"brotli>=1.0.9",
"blinker>=1.6.2",
"itsdangerous>=2.1.2",
"pydantic-settings",
"pyodbc",
"sqlalchemy"

]

[project.urls]
Homepage = "https://jeffmaxey.github.io/aiml-dash/"
Repository = "https://github.com/jeffmaxey/aiml-dash"
Documentation = "https://jeffmaxey.github.io/aiml-dash/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiml_dash"]

[tool.mypy]
files = ["aiml_dash"]
mypy_path = ["aiml_dash"]
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dash_ag_grid",
    "dash_iconify",
    "dash_mantine_components",
    "pandas",
    "plotly",
    "plotly.*",
    "scipy",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["aiml_dash"]
